[tool.poetry]
name = "pyspatialml"
version = "0.22.0"
description = "Machine learning classification and regression modelling for spatial raster data."
authors = ["Steven Pawley <dr.stevenpawley@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://stevenpawley.github.io/Pyspatialml/"
repository = "https://github.com/stevenpawley/Pyspatialml"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.66.4"
rasterio = "^1.3.10"
geopandas = "^0.14.4"
numpy = "^1.26.4"
scipy = "^1.13.0"
shapely = "^2.0.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.4.2"
affine = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
