[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# pyproject.toml
[tool.setuptools]
packages = ["pyspatialml"]

[project]
name = "pyspatialml"
version = "0.22.1"
description = "Machine learning classification and regression modelling for spatial raster data."
authors = [
  {name = "Steven Pawley", email = "dr.stevenpawley@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
  "tqdm>=4.66.4",
  "rasterio>=1.3.10",
  "geopandas>=0.14.4",
  "numpy>=1.26.4",
  "scipy>=1.13.0",
  "shapely>=2.0.4",
  "pandas>=2.2.2",
  "matplotlib>=3.9.0",
  "scikit-learn>=1.4.2",
  "affine>=2.4.0"
]

[project.optional-dependencies]
documentation = [
  "quartodoc>=0.7.2",
  "jupyter>=1.0.0",
  "ipykernel>=6.29.4",
  "black>=24.4.2"
]
testing = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "coverage>=7.5.3"
]

[project.urls]
homepage = "https://stevenpawley.github.io/Pyspatialml/"
repository = "https://github.com/stevenpawley/Pyspatialml"
